[package]
name = "vesync-rs"
version = "0.1.0"
authors = ["adam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"

# https://lib.rs/crates/reqwest
reqwest = { version = "0.10", features = ["blocking", "json"] }
