[package]
name = "vesync-rs"
version = "0.1.0"
authors = ["Adam Shirey <adam.shirey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"

# TODO: When nanoserde supports enums, we can use it instead of serde for a lightweight alternative.
# Current version (as of 2020-06-26) is 0.1.14, but this will likely change.
# nanoserde = "0.1.14"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"

# https://lib.rs/crates/reqwest
# attohttpc itself uses Serde. Switching to nanoserde should let us drop the 'json' feature in the future.
attohttpc = { version = "0.14.0", features = ["json"] }
#attohttpc = { version = "0.14.0" }
